# routes/events.js
@@ -2,16 +2,16 @@ const express = require('express');
 const router = express.Router();
 
 const eventsController = require("../controllers/events");
-const validation = require('../middleware/validate');
-
+//const validation = require('../middleware/validate');
+const {isAuthenticated} = require('../middleware/authenticate');
 router.get('/', eventsController.getAllEvents);
 
 router.get('/:id', eventsController.getSingleEvent);
 
-router.post('/', validation.saveEvent, eventsController.createEvent);
+router.post('/', isAuthenticated, eventsController.createEvent);
 
-router.put('/:id', validation.saveEvent, eventsController.updateEvent);
+router.put('/:id', isAuthenticated, eventsController.updateEvent);
 
-router.delete('/:id', eventsController.deleteEvent);
+router.delete('/:id', isAuthenticated, eventsController.deleteEvent);
 
 module.exports = router;
